base/nextjs/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: nextjs-demo
spec:
    selector:
        matchLabels:
            app: nextjs-demo
    template:
        metadata:
            labels:
                app: nextjs-demo
        spec:
            containers:
                - name: nextjs-demo
                  image: thiemeluis/nextjs-demo:0.0.1
                  resources:
                      limits:
                          memory: '128Mi'
                          cpu: '500m'
                  ports:
                      - containerPort: 3000
