base/nextjs/service.yaml
apiVersion: v1
kind: Service
metadata:
    name: nextjs-demo
spec:
    selector:
        app: nextjs-demo
    ports:
        - protocol: TCP
          port: 80
          targetPort: 3000
    type: ClusterIP
